--- a/client.html
+++ b/client.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Chat!</title>
+	<title>YoChat</title>
 	<link href="./normalize.css" rel="stylesheet" type="text/css" />
 	<link href="./style_main.css" rel="stylesheet" type="text/css" />
 	<link href="./style_default.css" rel="stylesheet" type="text/css"
