--- a/client.html
+++ b/client.html
@@ -20,7 +20,7 @@
 		onsubmit="post_message(this); return false;">
 		<input id="input_guest_name" name="guest_name" type="text">
 		<br />
-		<div class="expanding">
+		<div id="div_textarea_message" class="expanding">
 			<pre><span></span><br /></pre>
 			<textarea id="textarea_message" name="message_content"></textarea>
 		</div>
