Putting my style into a different file..

--- a/client.html
+++ b/client.html
@@ -9,6 +9,8 @@
 		title="Default" />
 	<link href="./style_blackonwhite.css" rel="stylesheet" type="text/css"
 		title="Black on White" />
+	<link href="./style_fancy.css" rel="stylesheet" type="text/css"
+		title="dbs" />
 	<script type="text/javascript" src="./openpgp.js"></script>
 	<script type="text/javascript" src="./cookies.js"></script>
 	<script type="text/javascript" src="./chat.js"></script>
@@ -52,6 +54,9 @@
 				<option value="Default">Default</option>
 				<option value="Black on White">
 					Black on White
+				</option>
+				<option value="dbs">
+					Default but Stylish
 				</option>
 			</select>
 			<br />
