Add user registration form

--- a/client.html
+++ b/client.html
@@ -24,7 +24,8 @@
 		<br />
 		<div id="div_textarea_message" class="expanding">
 			<pre><span></span><br /></pre>
-			<textarea id="textarea_message" name="message_content"></textarea>
+			<textarea id="textarea_message"
+				name="message_content"></textarea>
 		</div>
 		<input id="input_message" name="message_content" type="text"
 			hidden>
